<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assignment1b</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="waitress">waitress</string>
    <string name="start_timer">Start</string>
    <string name="pause_timer">Pause</string>
    <string name="reset_timer">Reset</string>
    <string name="radio_good">Good</string>
    <string name="radio_ok">OK</string>
    <string name="radio_bad">Bad</string>
    <string name="heading_availibility">Availibility</string>
    <string name="Opinion">checkbox_opinion</string>
    <string name="checkbox_opinion">Opinion</string>
    <string name="checkbox_specials">Specials</string>
    <string name="checkbox_friendly">Friendly</string>
    <string name="heading_introduction">Introduction</string>
    <string name="heading_final_bill">Final bill</string>
    <string name="heading_seekbar">Change tip</string>
    <string name="tip_text">Tip</string>
    <string name="bill_text">Bill</string>
    <string name="is_nan">Felaktig inmatning, endast nummer</string>
    <string name="action_pause">Pause</string>
    <string name="action_start">Play</string>
    <string name="action_reset">Reset</string>

    <string-array name="ratingtArray">
        <item>Bad</item>
        <item>Ok</item>
        <item>Good</item>
    </string-array>

</resources>
