<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MyActivity"
   >

    <item android:id="@+id/action_start"
        android:title="@string/action_start"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_play"
        android:showAsAction="always" />
    <item android:id="@+id/action_pause"
        android:title="@string/action_pause"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_pause"
        android:showAsAction="always" />
    <item
        android:title="@string/action_reset"
        android:id="@+id/action_reset"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_stop"
        android:showAsAction="always" />
</menu>
